--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
     }
 
     footer {
-      background-color: #2c3e50;
+      background-color: #1f2937;
       color: #fff;
     }
 
@@ -202,12 +202,19 @@
         <h6 class="text-uppercase mb-3">Quick Links</h6>
         <ul class="list-unstyled">
           {% if not user.is_authenticated %}
-          <li><a href="{% url 'accounts:login' %}" class="footer-link"><i class="fas fa-home me-2"></i>Home</a></li>
+          <li><a href="{% url 'home' %}" class="footer-link"><i class="fas fa-home me-2"></i>Home</a></li>
           <li><a href="{% url 'accounts:login' %}" class="footer-link"><i class="fas fa-users me-2"></i>Players</a></li>
           <li><a href="{% url 'accounts:login' %}" class="footer-link"><i class="fas fa-calendar-alt me-2"></i>Events</a></li>
           <li><a href="{% url 'accounts:login' %}" class="footer-link"><i class="fas fa-gamepad me-2"></i>My Matches</a></li>
           {% else %}
-            {% if not user.user_type == 'player' %}
+            {% if user.user_type == 'player' %}
+              <li><a href="{% url 'home' %}" class="footer-link"><i class="fas fa-home me-2"></i>Home</a></li>
+              <li><a href="{% url 'accounts:player_directory' %}" class="footer-link"><i class="fas fa-users me-2"></i>Players</a></li>
+              <li><a href="{% url 'events:event_list' %}" class="footer-link"><i class="fas fa-calendar-alt me-2"></i>Events</a></li>
+              <li><a href="{% url 'matches:my_matches' %}" class="footer-link"><i class="fas fa-gamepad me-2"></i>My Matches</a></li>
+          {% endif %}
+
+          {% if not user.user_type == 'player' %}
               <li><a href="{% url 'home' %}" class="footer-link"><i class="fas fa-home me-2"></i>Home</a></li>
               <li><a href="{% url 'accounts:player_directory' %}" class="footer-link"><i class="fas fa-users me-2"></i>Players</a></li>
               <li><a href="{% url 'events:event_list' %}" class="footer-link"><i class="fas fa-calendar-alt me-2"></i>Events</a></li>
@@ -222,7 +229,7 @@
         <p><i class="fas fa-envelope me-2"></i> Amoskilonzo370@gmail.com</p>
         <p><i class="fas fa-phone me-2"></i>+254 798 477 794</p>
         <div class="mt-2">
-          <a href="#" class="me-3 footer-icon"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/" class="me-3 footer-icon"><i class="fab fa-facebook-f"></i></a>
           <a href="#" class="me-3 footer-icon"><i class="fab fa-twitter"></i></a>
           <a href="#" class="footer-icon"><i class="fab fa-instagram"></i></a>
         </div>
