--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -18,7 +18,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card shadow">
-                <div class="card-header bg-primary text-white text-center">
+                <div class="card-header text-white text-center" style="background-color: #1f2937;">
                     <h3><i class="fas fa-user-plus me-2"></i>Create Account</h3>
                 </div>
                 <div class="card-body">
@@ -77,7 +77,7 @@
                         {% endif %}
 
                         <div class="d-grid">
-                            <button type="submit" class="btn btn-primary btn-lg">Create Account</button>
+                            <button type="submit" class="btn btn-dark btn-lg">Create Account</button>
                         </div>
                     </form>
 
