--- a/templates/accounts/player_directory.html
+++ b/templates/accounts/player_directory.html
@@ -42,8 +42,12 @@
                                     
                                     {% if user.user_type == 'player' and user != player %}
                                         <div class="mt-3">
-                                            <a href="{% url 'matches:create_match' %}?opponent={{ player.id }}" 
-                                               class="btn btn-primary btn-sm">Challenge</a>
+                                            <a href="{% url 'matches:create_match' %}?opponent={{ player.id }}"
+                                               class="btn btn-primary btn-sm me-1">Challenge</a>
+                                            <a href="{% url 'chat:start_chat' player.id %}"
+                                               class="btn btn-success btn-sm">
+                                                <i class="fas fa-comment me-1"></i>Chat
+                                            </a>
                                         </div>
                                     {% endif %}
                                 </div>
